--- a/server/views/taskList/caTasksFinalChecks.pug
+++ b/server/views/taskList/caTasksFinalChecks.pug
@@ -2,9 +2,12 @@ extends taskListTemplate
 
 block tasks
     div.taskListItem.borderBottomLight
-        include tasks/curfewAddressTask
+        if licenceStatus.decisions.bassReferralNeeded
+            include tasks/bassOfferTask
+        else
+            include tasks/curfewAddressTask
 
-    if (['unfinished', 'approved'].includes(licenceStatus.decisions.curfewAddressApproved))
+    if (['unfinished', 'approved'].includes(licenceStatus.decisions.curfewAddressApproved) || licenceStatus.decisions.bassReferralNeeded)
         div.taskListItem.borderBottomLight
             include tasks/riskManagementTask
 
