--- a/server/views/taskList/caTasksPostApproval.pug
+++ b/server/views/taskList/caTasksPostApproval.pug
@@ -9,7 +9,7 @@ block tasks
     if licenceStatus.decisions.eligible
         div.taskListItem.borderBottomLight
             if licenceStatus.decisions.bassReferralNeeded
-                include tasks/bassAddressTask
+                include tasks/bassOfferTask
             else
                 include tasks/curfewAddressTask
 
