--- a/server/views/includes/errorBannerWithDetail.pug
+++ b/server/views/includes/errorBannerWithDetail.pug
@@ -1,5 +1,5 @@
 mixin errorBannerWithDetail(errorObject, errors)
-    if Object.keys(errorObject).length !== 0
+    if errorObject && Object.keys(errorObject).length !== 0
         div.pure-g
             div.error-summary.pure-u-md-1-2(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
                 h2.heading-medium.error-summary-heading#error-summary-heading
