--- a/server/views/taskList/caTasksEligibility.pug
+++ b/server/views/taskList/caTasksEligibility.pug
@@ -18,4 +18,7 @@ block tasks
 
     else if licenceStatus.tasks.optOut === 'DONE'
         div.taskListItem.borderBottom
-            include tasks/caSubmitAddressReviewTask
+            if licenceStatus.decisions.bassReferralNeeded && !licenceStatus.decisions.optedOut
+                include tasks/caSubmitBassReviewTask
+            else
+                include tasks/caSubmitAddressReviewTask
