--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -2,24 +2,42 @@ include additionalConditions
 
 div.largeMarginBottom
 
-    // Proposed address
-    div.borderBottom
-        div.pure-g
-            div.pure-u-1.pure-u-md-1-2
-                h2#curfewAddressDetails.heading-medium Proposed curfew address
-            div.pure-u-1.pure-u-md-1-2.alignRight
-                div.pure-u-md-1-2.change-details
-                    if (stage === 'PROCESSING_RO' && user.role === 'RO')
-                        a#addressEditLink(href="/hdc/curfew/curfewAddressReview/change/" + bookingId) Change
-                    if(stage === 'ELIGIBILITY' && user.role === 'CA')
-                        a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/change/" + bookingId) Change
 
-        if typeof errorObject.proposedAddress === 'string'
-            p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
-        else
-            include curfewAddress
+    if (licenceStatus.decisions.bassReferralNeeded)
+        // BASS
+        div.borderBottom
+            div.pure-g
+                div.pure-u-1.pure-u-md-1-2
+                    h2#bassAreaDetails.heading-medium Proposed BASS area
+                div.pure-u-1.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                            a#bassEditLink(href="/hdc/bassReferral/bassAreaCheck/change/" + bookingId) Change
 
-    if (licenceStatus.decisions.curfewAddressApproved !== 'rejected')
+            if typeof errorObject.bassReferral === 'string'
+                p.alert.bold(id='bass-address-error') #{errorObject.bassReferral}
+            else
+                include bassArea
+
+    else
+        // Proposed address
+        div.borderBottom
+            div.pure-g
+                div.pure-u-1.pure-u-md-1-2
+                    h2#curfewAddressDetails.heading-medium Proposed curfew address
+                div.pure-u-1.pure-u-md-1-2.alignRight
+                    div.pure-u-md-1-2.change-details
+                        if (stage === 'PROCESSING_RO' && user.role === 'RO')
+                            a#addressEditLink(href="/hdc/curfew/curfewAddressReview/change/" + bookingId) Change
+                        if(stage === 'ELIGIBILITY' && user.role === 'CA')
+                            a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/change/" + bookingId) Change
+
+            if typeof errorObject.proposedAddress === 'string'
+                p.alert.bold(id='proposed-address-error') #{errorObject.proposedAddress}
+            else
+                include curfewAddress
+
+    if (licenceStatus.decisions.curfewAddressApproved !== 'rejected' && !licenceStatus.decisions.bassAreaNotSuitable)
 
         // Risk
         div.borderBottom
