--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -38,6 +38,13 @@ block content
                         div.pure-u-1.inlineButtons.paddingBottom.smallPaddingTop
                             input#continueBtn.requiredButton.button.button-start.midMarginBottom(type="submit" value="Send case")
 
+            else if licenceStatus.decisions.bassAreaNotSuitable
+                form#licenceDetailsForm(method='POST', action='/hdc/send/bassAreaRejected/' + bookingId)
+                    input(type="hidden" name="_csrf" value=csrfToken)
+                    div.pure-u-1.inlineButtons
+                        div.pure-u-1.inlineButtons.paddingBottom.smallPaddingTop
+                            input#continueBtn.requiredButton.button.button-start.midMarginBottom(type="submit" value="Send case")
+
             else
                 form#licenceDetailsForm(method='POST', action='/hdc/send/finalChecks/' + bookingId)
                     input(type="hidden" name="_csrf" value=csrfToken)
