moved getLicenceStatus to middleware. added notice if prisoner has exceptional circumstances

--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -2,6 +2,7 @@
     color: white;
 
     .header-wrapper {
+        max-width: 1170px;
         padding-top: 0px;
         padding-bottom: 0px;
     }
