--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -1,5 +1,5 @@
 header(role="banner", id="global-header", class="with-proposition")
-    div.header-wrapper
+    div.header-wrapper.sm-PadLeftRight15
         div.pure-g
             div.pure-u-1.pure-u-md-1-2
                 div.header-logo
