--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -47,7 +47,9 @@ html(lang="en")
 
         include global-header
 
+
         main.app-container(role="main")
+            include ./includes/notice
             block content
 
         footer(class="group js-footer", id="footer", role="contentinfo")
