added hdced into ca caselist and altered sorting functionality

--- a/assets/sass/caselist.scss
+++ b/assets/sass/caselist.scss
@@ -26,7 +26,7 @@
     }
 }
 
-#hdcEligiblePrisoners.sortcolumns {
+#hdcEligiblePrisoners.sortcolumns, #hdcEligiblePrisoners.caSortcolumns{
     thead tr .sortable {
         background-image: url($path+'/bg.gif');
         background-repeat: no-repeat;
