--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -4,14 +4,14 @@ block content
     div.pure-g
         if user.role === 'RO'
             div.pure-u-1.searchLink.alignRight.sm-padTop55.u-paddingTop
-                a#searchOffenderLink(href='/hdc/search/offender') Search for an offender
+                a#searchOffenderLink(href='/hdc/search/offender') Search all offenders
 
         div.pure-u-1
             h2.heading-medium Case list
 
             div.pure-g
                 div.pure-u-1.pure-u-md-2-5.form-group
-                    input.form-control(type="text" id="caseListFilter" placeholder="Search for case..." title="Filter the case list by text content")
+                    input.front-end-control.form-control(type="text" id="caseListFilter" placeholder="Search your case list" title="Filter the case list by text content")
 
             if user.role === 'CA'
                 include ./CATable
