do not require occupier permission if offender is occupier

--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -23,32 +23,57 @@ block content
             div.pure-g.largePaddingBottom
                 div.pure-u-1.pure-u-sm-5-12.pure-g
                     div.form-group.inline.paddingTop
-                        h3.heading-medium Does the main occupier consent to HDC?
+                        if !licenceStatus.decisions.offenderIsMainOccupier
 
-                        div.multiple-choice(data-target="consentForm")
-                            input#hdcConsentYes(type="radio" checked=address.consent === 'Yes' name="consent" value="Yes")
-                            label(for="hdcConsentYes") Yes
-                        div.multiple-choice
-                            input#hdcConsentNo(type="radio" checked=address.consent === 'No' name="consent" value="No")
-                            label(for="hdcConsentNo") No
+                            h3.heading-medium Does the main occupier consent to HDC?
 
-                        div#consentForm.panel.panel-border-narrow.js-hidden
-                            div.form-group
-                                p Is there an electricity supply?
-                                div.multiple-choice
-                                    input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
-                                    label(for="electricityYes") Yes
-                                div.multiple-choice
-                                    input#electricityNo(type="radio" checked=address.electricity === 'No' name="electricity" value="No")
-                                    label(for="electricityNo") No
+                            div.multiple-choice(data-target="consentForm")
+                                input#hdcConsentYes(type="radio" checked=address.consent === 'Yes' name="consent" value="Yes")
+                                label(for="hdcConsentYes") Yes
+                            div.multiple-choice
+                                input#hdcConsentNo(type="radio" checked=address.consent === 'No' name="consent" value="No")
+                                label(for="hdcConsentNo") No
 
-                            div.form-group
-                                p Did you do a home visit?
-                                div.multiple-choice
-                                    input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
-                                    label(for="homeVisitConductedYes") Yes
-                                div.multiple-choice
-                                    input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
-                                    label(for="homeVisitConductedNo") No
+                            div#consentForm.panel.panel-border-narrow.js-hidden
+                                div.form-group
+                                    p Is there an electricity supply?
+                                    div.multiple-choice
+                                        input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
+                                        label(for="electricityYes") Yes
+                                    div.multiple-choice
+                                        input#electricityNo(type="radio" checked=address.electricity === 'No' name="electricity" value="No")
+                                        label(for="electricityNo") No
+
+                                div.form-group
+                                    p Did you do a home visit?
+                                    div.multiple-choice
+                                        input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
+                                        label(for="homeVisitConductedYes") Yes
+                                    div.multiple-choice
+                                        input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
+                                        label(for="homeVisitConductedNo") No
+
+                        else
+                            div#consentForm
+
+                                h3.heading-medium Curfew address review
+
+                                div.form-group
+                                    p Is there an electricity supply?
+                                    div.multiple-choice
+                                        input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
+                                        label(for="electricityYes") Yes
+                                    div.multiple-choice
+                                        input#electricityNo(type="radio" checked=address.electricity === 'No' name="electricity" value="No")
+                                        label(for="electricityNo") No
+
+                                div.form-group
+                                    p Did you do a home visit?
+                                    div.multiple-choice
+                                        input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
+                                        label(for="homeVisitConductedYes") Yes
+                                    div.multiple-choice
+                                        input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
+                                        label(for="homeVisitConductedNo") No
 
             include ../includes/formSubmit
