--- a/server/views/taskList/tasks/bassOfferTask.pug
+++ b/server/views/taskList/tasks/bassOfferTask.pug
@@ -30,5 +30,9 @@ div.paddingBottom
 
         div.pure-u-1.pure-u-md-1-4.center
             -var bassOfferPath = "/hdc/bassReferral/bassOffer/" + prisonerInfo.bookingId
+            -var reviewPath = "/hdc/review/bassOffer/" + prisonerInfo.bookingId
 
-            +startContinueChange(licenceStatus.tasks.bassOffer, bassOfferPath)
+            if user.role == 'CA'
+                +startContinueChange(licenceStatus.tasks.bassOffer, bassOfferPath)
+            else
+                +view(reviewPath)
