added sorting of case list by status

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -4,7 +4,7 @@ table#hdcEligiblePrisoners.caSortcolumns.largeMarginBottom
             th.sortable Name
             th.hideMobile Prison no.
             th.sortable HDCED
-            th.hideMobile Status
+            th.sortable.hideMobile Status
             th
     tbody
         if hdcEligible && hdcEligible.length > 0
