--- a/server/views/caseList/ROTable.pug
+++ b/server/views/caseList/ROTable.pug
@@ -4,7 +4,7 @@ table#hdcEligiblePrisoners.sortcolumns.largeMarginBottom
             th.sortable Name
             th.hideMobile Prison no.
             th.sortable Request received
-            th.hideMobile Status
+            th.sortable.hideMobile Status
             th
     tbody
         if hdcEligible && hdcEligible.length > 0
