--- a/server/views/review/bassOffer.pug
+++ b/server/views/review/bassOffer.pug
@@ -24,6 +24,10 @@ block content
             div.pure-u-1.pure-u-md-1-3.paddingTop
                 span BASS outcome
             div.pure-u-1.pure-u-md-2-3.paddingTop#bassOfferStatus
+
+                if licenceStatus.decisions.bassAreaNotSuitable
+                    div.bold BASS area rejected
+
                 -var offer = licenceStatus.decisions.bassAccepted
                 if offer === 'Yes'
                     div.bold Offer made and property available
