--- a/server/views/taskList/tasks/bassOfferTask.pug
+++ b/server/views/taskList/tasks/bassOfferTask.pug
@@ -4,7 +4,15 @@ div.paddingBottom
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
 
-            if licenceStatus.tasks.bassOffer === 'DONE'
+            if licenceStatus.tasks.bassAreaCheck === 'DONE'
+                if licenceStatus.decisions.bassAreaNotSuitable
+                    span.alert.bold  BASS area rejected
+                else if licenceStatus.decisions.bassAreaSuitable
+                    | BASS area approved
+                else
+                    | BASS referral requested
+
+            else if licenceStatus.tasks.bassOffer === 'DONE'
                 -var offer = licenceStatus.decisions.bassAccepted
 
                 if offer === 'Yes'
