--- a/server/views/taskList/tasks/informOffenderTask.pug
+++ b/server/views/taskList/tasks/informOffenderTask.pug
@@ -8,4 +8,4 @@ div.largeMarginBottom
             | You should now tell the offender using the relevant form
 
         div.pure-u-1.pure-u-md-1-4.center
-            +taskButton("/caseList/" + caseListTab, 'Back to case list')
+            +taskButton("/caseList/" + caseListTab, 'Back to case list', 'grey')
