--- a/server/views/taskList/tasks/returnToCaTask.pug
+++ b/server/views/taskList/tasks/returnToCaTask.pug
@@ -4,4 +4,4 @@ div.taskListSingleLineItem.u-paddingBottom.sm-midPaddingBottom.pure-g
 
     div.pure-u-1.pure-u-md-1-4.center.buttonContainer
         -var path = "/hdc/send/return/" + prisonerInfo.bookingId
-        +taskButton(path, 'Return to prison case admin')
+        +taskButton(path, 'Return to prison case admin', 'grey')
