--- a/server/views/taskList/includes/startContinueChangeButton.pug
+++ b/server/views/taskList/includes/startContinueChangeButton.pug
@@ -10,6 +10,6 @@ mixin startContinueChange(task, path, id)
         a.taskListAction(href=path, id=id) Change
 
     else
-        a.taskListAction.center.button(class='button-secondary', href=path, id=id) Continue
+        a.taskListAction.center.button(href=path, id=id) Continue
 
 
