--- a/server/views/bassReferral/includes/bassAddressForm.pug
+++ b/server/views/bassReferral/includes/bassAddressForm.pug
@@ -1,5 +1,5 @@
 mixin bassAddressForm
-    -var bassAddress = data && data.bassOffer && data.bassOffer.bassAddress || {}
+    -var bassOffer = data && data.bassOffer || {}
 
     div.pure-g.paddingBottom
         div.pure-u-1.pure-u-md-1-2
@@ -8,24 +8,24 @@ mixin bassAddressForm
 
                     div.form-group.midMarginBottom
                         div.bold Area provided
-                        input.form-control(id="bassArea" name="bassAddress[bassArea]" value=bassAddress.bassArea autofocus aria-label="Area provided")
+                        input.form-control(id="bassArea" name="bassArea" value=bassOffer.bassArea autofocus aria-label="Area provided")
 
                     div.form-group.midMarginBottom.paddingTop
                         div.bold.smallPaddingBottom Address provided by BASS
                         label.form-label(for="address1") Building and street
-                        input.form-control(id="address1" name="bassAddress[addressLine1]" value=bassAddress.addressLine1 autofocus aria-label="Building and street")
-                        input.form-control.smallMarginTop(id="address2" name="bassAddress[addressLine2]" value=bassAddress.addressLine2)
+                        input.form-control(id="address1" name="addressLine1" value=bassOffer.addressLine1 autofocus aria-label="Building and street")
+                        input.form-control.smallMarginTop(id="address2" name="addressLine2" value=bassOffer.addressLine2)
 
                     div.form-group.midMarginBottom
                         label.form-label(for="town") Town or city
-                        input.form-control(id="town" name="bassAddress[addressTown]" value=bassAddress.addressTown aria-label="Town or city")
+                        input.form-control(id="town" name="addressTown" value=bassOffer.addressTown aria-label="Town or city")
 
                     div.form-group.midMarginBottom.pure-u-sm-1.pure-u-md-1-2
                         label.form-label(for="postCode") Postcode
-                        input.form-control(id="postCode" name="bassAddress[postCode]" value=bassAddress.postCode aria-label="Postcode")
+                        input.form-control(id="postCode" name="postCode" value=bassOffer.postCode aria-label="Postcode")
 
                     div.form-group.pure-u-sm-1.pure-u-md-3-4
                         label.form-label(for="telephone") Telephone (optional)
-                        input.form-control(id="telephone" name="bassAddress[telephone]" value=bassAddress.telephone aria-label="Telephone")
+                        input.form-control(id="telephone" name="telephone" value=bassOffer.telephone aria-label="Telephone")
 
 
