--- a/server/views/review/includes/bassArea.pug
+++ b/server/views/review/includes/bassArea.pug
@@ -1,8 +1,20 @@
 include ./itemAndError
 -var bassAreaCheck = data.bassReferral && data.bassReferral.bassAreaCheck || {}
+-var bassRequest = data.bassReferral && data.bassReferral.bassRequest || {}
 -var errors = errorObject.bassReferral && errorObject.bassReferral.bassAreaCheck || {}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
+
+    div.pure-u-1.pure-u-md-1-2
+        span Proposed county
+    div.pure-u-1.pure-u-md-1-2#proposedCounty
+        +itemAndError(bassRequest.proposedCounty, errors.proposedCounty, "proposedCounty")
+
+    div.pure-u-1.pure-u-md-1-2
+        span Proposed town
+    div.pure-u-1.pure-u-md-1-2#proposedTown
+        +itemAndError(bassRequest.proposedTown, errors.proposedTown, "proposedTown")
+
     div.pure-u-1.pure-u-md-1-2
         span Is the BASS area suitable?
     div.pure-u-1.pure-u-md-1-2#bassAreaDetails
